# cmake_arduino

./: CMakeLists.txt  README.md  arduino.cmake
arduino_cmake_test/: arduino.cmake  arduino_blink.c  arduino_uno_rev3.cmake
cmake_modules/: .arduino.cmake.swp  .arduino_uno_rev3.cmake.swp  arduino.cmake  arduino_toolchain.cmake  arduino_uno_rev3.cmake  arduino_uno_rev3_notes.txt
dox/: arduino_mega_2560_notes.md  arduino_uno_rev3_notes.md  how_to_use_cmake_arduino.md
examples/: .CMakeLists.txt.swp  CMakeLists.txt
examples/arduino_blink/: CMakeLists.txt  arduino.cmake  arduino_uno_rev3.cmake
